--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
 * {
   font-family: 'Questrial', sans-serif;
-  background-color: #F6F6F6;
+  /* background-color: #F6F6F6; */
 }
 
 .fullHeight {
   height: 100vh;
+  /* width: 100vw; */
 }
 
-.register {
+.register, .mainText {
   color: #4461F2;
+}
+
+.bg-main {
+  background-color: #4461F2 !important;
+}
+
+.bg-cards {
+  background-color: #F2F2F2 !important;
 }
 
 .register:hover{
@@ -27,4 +36,26 @@
 
 .form:focus {
   box-shadow: none !important;
+}
+
+.beige {
+  background-color: #F6F6F6;
+}
+
+.profile {
+  width: 80px;
+  height: 80px;
+}
+
+.rounded-circle {
+  border-radius: 50%;
+  background-color: bisque;
+}
+
+.remove-border {
+  border: none !important;
+}
+
+.table {
+  overflow-x: scroll;
 }
